--- a/app/src/main/res/layout/fragment_assess.xml
+++ b/app/src/main/res/layout/fragment_assess.xml
@@ -25,14 +25,14 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView8"
+                    android:id="@+id/personProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:src="@drawable/person2" />
 
                 <TextView
-                    android:id="@+id/textView26"
+                    android:id="@+id/personName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="160dp"
@@ -64,7 +64,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/textView25"
+                        android:id="@+id/scope"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="75dp"
@@ -97,7 +97,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView30"
+                    android:id="@+id/reviewContent"
                     android:layout_width="305dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
