--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -67,7 +67,7 @@
                     android:orientation="horizontal">
 
                     <CheckBox
-                        android:id="@+id/yesCheckBox3"
+                        android:id="@+id/yesCheckBox1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="210dp"
@@ -75,7 +75,7 @@
                         android:text="네" />
 
                     <CheckBox
-                        android:id="@+id/noCheckBox3"
+                        android:id="@+id/noCheckBox1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
@@ -130,7 +130,7 @@
                     android:text="리뷰를 통해 다음 맡기미 분께 알려주세요" />
 
                 <Button
-                    android:id="@+id/button5"
+                    android:id="@+id/reviewButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="140dp"
@@ -155,7 +155,7 @@
                     android:text="후기를 참고해 더 나은 돌보미가 되겠습니다." />
 
                 <Button
-                    android:id="@+id/button6"
+                    android:id="@+id/completeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="140dp"
