--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -30,7 +30,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView5"
+                        android:id="@+id/dogProfile2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -69,7 +69,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/rDay2"
+                        android:id="@+id/rDay4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -78,7 +78,7 @@
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/rDay3"
+                        android:id="@+id/rDay5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="53dp"
@@ -92,7 +92,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/rTime2"
+                        android:id="@+id/rTime4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -101,7 +101,7 @@
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/rTime3"
+                        android:id="@+id/rTime5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="53dp"
@@ -119,7 +119,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="17dp"
                         android:text="요금정보"
                         android:textSize="18sp" />
 
@@ -175,7 +175,7 @@
                             android:text="GPS 목걸이를 같이 맡겨주세요" />
 
                         <CheckBox
-                            android:id="@+id/checkBox7"
+                            android:id="@+id/gpsCheckBox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -190,7 +190,7 @@
                         android:textSize="10sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/textView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="75dp"
