--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -30,7 +30,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView5"
+                        android:id="@+id/dogProfile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -129,7 +129,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/payButton"
+                        android:id="@+id/applyButton"
                         android:layout_width="103dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="60dp"
@@ -138,7 +138,7 @@
                         android:text="신청하기" />
 
                     <Button
-                        android:id="@+id/cancelButton1"
+                        android:id="@+id/cancelButton"
                         android:layout_width="103dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
