--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -66,7 +66,7 @@
                             android:src="@drawable/person1" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/idOutput1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -84,7 +84,7 @@
                         android:padding="10dp">
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/detail1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="내용을 기입해주세요" />
