--- a/app/src/main/res/layout/fragment_write_list.xml
+++ b/app/src/main/res/layout/fragment_write_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
-    tools:context=".WriteAllFragment">
+    tools:context=".WriteListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
