--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -141,25 +141,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/button11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/bold1"
+                android:backgroundTint="#D3D3D3"
+                android:text="돌아가기" />
 
             <Button
                 android:id="@+id/button10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#F8BBD0"
-                android:backgroundTint="#F8BBD0"
+                android:background="#573E8B28"
+                android:backgroundTint="#573E8B28"
                 android:text="신청하기" />
-
-            <Button
-                android:id="@+id/button11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/bold1"
-                android:backgroundTint="#D3D3D3"
-                android:text="돌아가기" />
         </LinearLayout>
 
     </LinearLayout>
