--- a/app/src/main/res/layout/fragment_assess.xml
+++ b/app/src/main/res/layout/fragment_assess.xml
@@ -108,23 +108,29 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/button7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="68dp"
-                        android:backgroundTint="#573E8B28"
-                        android:text="작성완료" />
+                    android:orientation="horizontal"
+                    android:padding="10dp">
 
                     <Button
                         android:id="@+id/button8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
-                        android:backgroundTint="#573E8B28"
+
+                        android:layout_marginRight="8dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/bold1"
+                        android:backgroundTint="#C5C5C5"
                         android:text="돌아가기" />
+
+                    <Button
+                        android:id="@+id/button7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#573E8B28"
+                        android:backgroundTint="#573E8B28"
+                        android:text="작성완료" />
+
                 </LinearLayout>
 
             </LinearLayout>
