--- a/app/src/main/res/layout/fragment_join1.xml
+++ b/app/src/main/res/layout/fragment_join1.xml
@@ -88,18 +88,25 @@
                 android:text="이벤트 및 마케팅 정보 수신 동의 (선택)"
                 android:textSize="16sp" />
 
-            <Button
-                android:id="@+id/nextButton1"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="#F8BBD0"
-                android:backgroundTint="#F8BBD0"
-                android:text="다음"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:ignore="TextContrastCheck,TextContrastCheck" />
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/nextButton1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="#573E8B28"
+                    android:backgroundTint="#573E8B28"
+                    android:text="다음"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextContrastCheck,TextContrastCheck" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
