--- a/app/src/main/res/layout/fragment_edit_dog.xml
+++ b/app/src/main/res/layout/fragment_edit_dog.xml
@@ -257,13 +257,20 @@
 
             </androidx.cardview.widget.CardView>
 
-            <Button
-                android:id="@+id/editButton"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#F8BBD0"
-                android:backgroundTint="#F8BBD0"
-                android:text="수정하기" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <Button
+                    android:id="@+id/editButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#573E8B28"
+                    android:backgroundTint="#573E8B28"
+                    android:text="수정하기" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
