--- a/app/src/main/res/layout/fragment_join2.xml
+++ b/app/src/main/res/layout/fragment_join2.xml
@@ -103,8 +103,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="40dp"
-                    android:background="#F8BBD0"
-                    android:backgroundTint="#F8BBD0"
+                    android:background="#573E8B28"
+                    android:backgroundTint="#573E8B28"
                     android:text="다음"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
