나 김현문 이올시다

--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -172,7 +172,7 @@
                             android:src="@drawable/play" />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/register"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
