--- a/app/src/main/res/layout/fragment_add_dog.xml
+++ b/app/src/main/res/layout/fragment_add_dog.xml
@@ -231,7 +231,7 @@
                             android:padding="5dp">
 
                             <TextView
-                                android:id="@+id/textView3"
+                                android:id="@+id/register"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="예방접종을 완료 하셨나요?"
