--- a/app/src/main/res/layout/fragment_assess.xml
+++ b/app/src/main/res/layout/fragment_assess.xml
@@ -84,7 +84,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
-                        android:text="돌보미에게 한 마디"
+                        android:text="맡김이에게 한 마디"
                         android:textSize="16sp" />
 
                     <TextView
