--- a/app/src/main/res/layout/fragment_care_main.xml
+++ b/app/src/main/res/layout/fragment_care_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:text="맡김 중이에요"
+        android:text="돌봄중이에요"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
